data/derived/sp14/progs/unify/prog1713.ml.out
Characters 175-176:
  let (_, res) = List.fold_left f base args in res
                                ^
Error: This expression has type 'a list -> 'b * 'a -> int * 'a list
       but an expression was expected of type 'a list -> 'b * 'a -> 'a list
       Type int * 'a list is not compatible with type 'a list 
